@@ -1,3 +1,9 @@
+2007-03-30  Murray Cumming  <murrayc@murrayc.com>
+
+	* examples/book/notebook/examplewindow.cc:
+	* examples/book/notebook/examplewindow.h: Connect to the switch-page signal, 
+	as a demonstration.
+
 2007-03-12  Andrew E. Makeev  <andrew@solvo.ru>
 
 	* gtk/src/treeview.ccg: fix memory leak in get_cursor() function.
